manifests/lychee/lychee.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lychee
  namespace: lychee
  labels:
    app: lychee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lychee
  template:
    metadata:
      labels:
        app: lychee
      annotations: {}
    spec:
      volumes:
        - name: lychee-uploads
          persistentVolumeClaim:
            claimName: pvc-lychee
      containers:
        - name: lychee
          image: lycheeorg/lychee:v6.2.0
          env: []
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 10
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: "0.2"
              memory: 256Mi
            limits:
              cpu: 1
              memory: 1024Mi
          volumeMounts:
            - mountPath: /uploads
              name: lychee-uploads

---
apiVersion: v1
kind: Service
metadata:
  name: lychee
  namespace: lychee
  labels:
    app: lychee
spec:
  ports:
    - appProtocol: http
      name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: lychee

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lychee2
  namespace: lychee
  labels:
    app: lychee
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  rules:
    - host: images.incubateur.net
      http:
        paths:
          - backend:
              service:
                name: lychee
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - images.incubateur.net
      secretName: lychee2-tls-secret
